test/langtools/tools/javac/valhalla/value-objects/classfile/null_restricted_attr/only_on_fields/NullRestrictedAttrOnlyOnFields.out
NullRestrictedAttrOnlyOnFields.java:13:9: compiler.err.cant.access: NullRestrictedOnMethod, (compiler.misc.bad.class.file.header: NullRestrictedOnMethod.class, (compiler.misc.attribute.only.applicable.to.fields: NullRestricted))
1 error
